--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       background-color: #fff0f5;
     }
 
+    h1 {
+      font-size: 28px;
+      color: #ff1493;
+    }
+
     button {
       padding: 10px 20px;
       font-size: 18px;
@@ -47,9 +52,26 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
+    #resultCard img {
+      width: 100px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+    }
+
     #resultText {
       font-size: 22px;
       color: #ff69b4;
+    }
+
+    #previewImage {
+      margin-top: 30px;
+    }
+
+    #previewImage img {
+      width: 300px;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -67,9 +89,13 @@
 
   <!-- การ์ดสรุปคะแนน -->
   <div id="resultCard">
+    <img src="baby.jpg" alt="baby">
     <p id="resultText"></p>
     <button onclick="saveCard()">💾 บันทึกภาพ</button>
   </div>
+
+  <!-- แสดงภาพที่ capture -->
+  <div id="previewImage"></div>
 
   <!-- JavaScript + html2canvas -->
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
@@ -93,18 +119,34 @@
       const card = document.getElementById("resultCard");
       const saveButton = card.querySelector("button");
 
-      // ซ่อนปุ่มก่อนถ่ายภาพ
+      // ซ่อนปุ่มก่อน capture
       saveButton.style.display = "none";
 
       html2canvas(card).then(canvas => {
         // สร้างลิงก์ดาวน์โหลด
-        let link = document.createElement('a');
+        const imgData = canvas.toDataURL("image/png");
+        const link = document.createElement('a');
         link.download = 'cute_rating.png';
-        link.href = canvas.toDataURL("image/png");
+        link.href = imgData;
         link.click();
+
+        // สร้าง <img> สำหรับ preview
+        const img = new Image();
+        img.src = imgData;
+        img.alt = "บันทึกคะแนน";
+        img.style.width = "300px";
+        img.style.borderRadius = "15px";
+        img.style.boxShadow = "0 4px 12px rgba(0, 0, 0, 0.3)";
+        img.style.marginTop = "15px";
+
+        const previewDiv = document.getElementById("previewImage");
+        previewDiv.innerHTML = "<h3>📸 ภาพที่บันทึกไว้:</h3>";
+        previewDiv.appendChild(img);
 
         // แสดงปุ่มกลับมา
         saveButton.style.display = "inline-block";
+      }).catch(err => {
+        console.error("ไม่สามารถบันทึกภาพได้:", err);
       });
     }
   </script>
